--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -22,3 +22,13 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+#map-panel{
+    width: 100%;
+    height: 300px;
+}
+
+#map {
+    height: 100%;
+}
