--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -41,10 +41,58 @@ textarea {
 }
 
 #main-container{
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .mark-marker{
     color: greenyellow;
 }
+
+.panel-warning{
+    background-color: #A3CCFF;
+    border: 1px solid #A3CCFF;
+    border-radius: 50px 0px 0px 10px;
+    color: #666666;
+    font-weight: 700;
+    letter-spacing: .5px;
+    opacity: 0.8
+}
+
+.panel-warning dt{
+    color: white;
+    font-weight: 700;
+    letter-spacing: 2px;
+    opacity: 0.7;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: underline;
+}
+
+.panel-info .panel-heading{
+    background-color: #A3CCFF;
+    color: black;
+    font-size:20px;
+    letter-spacing: 2px;
+    font-weight: 900;
+    text-align: center;
+}
+
+.panel-info{
+    border: 1px solid #A3CCFF;
+    box-shadow: 0 0 7px #FB5D4F;
+}
+
 
