--- a/MVC/Views/Message/Message-Info.cshtml
+++ b/MVC/Views/Message/Message-Info.cshtml
@@ -2,6 +2,10 @@
 <!-- contentstring for google infowindow -->
 '<h4>@Html.DisplayNameFor(model => model.Title)</h4>' +
 '<h6>@Html.DisplayFor(model => model.Title)</h6>' +
+'<h4>@Html.DisplayNameFor(model => model.Description)</h4>' +
+'<h6>@Html.DisplayFor(model => model.Description)</h6>' +
+'<h4>@Html.DisplayNameFor(model => model.Category)</h4>' +
+'<h6>@Html.DisplayFor(model => model.Category)</h6>' +
 '<h4>@Html.DisplayNameFor(model => model.Createddate)</h4>' +
 '<h6>@Html.DisplayFor(model => model.Createddate)</h6>' 
 
