--- a/MVC/Views/Shared/DisplayTemplates/Message.cshtml
+++ b/MVC/Views/Shared/DisplayTemplates/Message.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC.Models.Message
 
-<a id="@Html.DisplayFor(model => model.Id)" href="#">
-    <div>
+<a id="@Html.DisplayFor(model => model.Id)" href="#@Html.DisplayFor(model => model.Id)">
+    <div class="panel panel-warning">
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.Priority)
