--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -53,6 +53,7 @@ textarea {
     border: 1px solid #A3CCFF;
     border-radius: 50px 0px 0px 10px;
     color: #666666;
+    font-size: 12px;
     font-weight: 700;
     letter-spacing: .5px;
     opacity: 0.8
@@ -60,8 +61,9 @@ textarea {
 
 .panel-warning dt{
     color: white;
+    font-size: 12px;
     font-weight: 700;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     opacity: 0.7;
 }
 
@@ -84,7 +86,7 @@ a:active {
 .panel-info .panel-heading{
     background-color: #A3CCFF;
     color: black;
-    font-size:20px;
+    font-size: 16px;
     letter-spacing: 2px;
     font-weight: 900;
     text-align: center;
@@ -93,6 +95,11 @@ a:active {
 .panel-info{
     border: 1px solid #A3CCFF;
     box-shadow: 0 0 7px #FB5D4F;
+}
+
+.btn-info{
+    background-color: #FF6051;
+    border: 2px solid #FF6051;
 }
 
 
