--- a/MVC/Views/Message/Message-Info.cshtml
+++ b/MVC/Views/Message/Message-Info.cshtml
@@ -1,12 +1,7 @@
 ﻿@model MVC.Models.Message
 <!-- contentstring for google infowindow -->
-'<h4>@Html.DisplayNameFor(model => model.Title)</h4>' +
-'<h6>@Html.DisplayFor(model => model.Title)</h6>' +
-'<h4>@Html.DisplayNameFor(model => model.Description)</h4>' +
-'<h6>@Html.DisplayFor(model => model.Description)</h6>' +
-'<h4>@Html.DisplayNameFor(model => model.Category)</h4>' +
-'<h6>@Html.DisplayFor(model => model.Category)</h6>' +
-'<h4>@Html.DisplayNameFor(model => model.Createddate)</h4>' +
-'<h6>@Html.DisplayFor(model => model.Createddate)</h6>' 
+'<h4>@Html.Raw(Model.Title)</h4>' +
+'<h4>@Html.Raw(Model.Category)</h4>' +
+'<h4>@Html.Raw(Model.Createddate)</h4>'
 
 
