--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -41,7 +41,7 @@ textarea {
 }
 
 #main-container{
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .mark-marker{
@@ -99,7 +99,31 @@ a:active {
 
 .btn-info{
     background-color: #FF6051;
-    border: 2px solid #FF6051;
+    border-radius: 50px 50px 50px 50px;
+    font-weight: 500;
+    font-variant: small-caps;
+    letter-spacing: 1px;
+    margin: 4px;
+    border: 1px solid black;
+    border-bottom: 2px solid black;
+    width: 195px;
+    max-width: 100%;
 }
+
+.panel{
+    margin-top: 20px
+}
+
+.panel-heading{
+        background-image: url(background.png);
+}
+
+.panel-footer{
+        background-image: url(background.png);
+    opacity: .4
+}
+
+
+
 
 
