--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Laboration 03 Webbteknik II</p>
+            <p>&copy; @DateTime.Now.Year - Laboration 03 Webbteknik II. Sidan efterfrågades data @DateTime.Now.ToLongDateString() kl. @DateTime.Now.ToLocalTime()</p>
         </footer>
     </div>
 
