--- a/MVC/Views/Message/Index.cshtml
+++ b/MVC/Views/Message/Index.cshtml
@@ -9,7 +9,7 @@
         <!-- Filter Start -->
         <div class="container">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="panel panel-info">
+                <div id="panel-selector" class="panel panel-info">
                     <div class="panel-heading">
                         Välj meddelanden!
                     </div>
@@ -39,7 +39,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <!-- Traffic Messages start -->
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="panel panel-info">
+                        <div id="panel-messages" class="panel panel-info">
                             <div class="panel-heading">
                                 @Model.Messages.Count() meddelande - @Model.Categories.Where(cat => cat.Id == Model.Cat).FirstOrDefault().Name
                             </div>
@@ -54,7 +54,7 @@
                     <!-- Traffic Messages end -->
                     <!-- Google Map API map Sweden start -->
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="panel panel-info">
+                        <div id="panel-map" class="panel panel-info">
                             <div class="panel-heading">
                                 Aktuellt i Sverige jus nu!
                             </div>
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="col-lg-12">
                 <div class="panel panel-info">
-                    <div class="panel-heading">Reflektionsfrågor</div>
+                    <div id="panel-reflection"class="panel-heading">Reflektionsfrågor</div>
                     <div class="panel panel-body">
                         <!-- Punkt 1 -->
                         <div class="well well-sm">
@@ -180,6 +180,15 @@
             }
         })
     })
+</script>
+
+<script>
+            
+    document.querySelector("#panel-reflection").addEventListener("click", function()
+    {
+        $("#panel-reflection").next().fadeToggle(1200);
+    });
+
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRQEa5tgji28sfF62K_GodXjGJod53Zrs&callback=initMap"
